Text-align correction

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -344,6 +344,7 @@ section {
    }
    .step h3 {
        flex: 1 100%;
+       text-align: center;
    }
    .step-info {
        flex: 2 100%;
